# nintendo-eshop-prices

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-publish.yml  pythonpackage.yml
eshop_prices/: __init__.py  eshop.py
tests/: test_eshop.py
tests/fixtures/: eshop_prices.html
